Fix up some spacing

--- a/client/src/sass/style.scss
+++ b/client/src/sass/style.scss
@@ -23,5 +23,5 @@ h1, h2, h3, h4, h5, h6 {
 
 .main {
   width: 100%;
-  padding: 1rem 6rem;
+  padding: 3rem;
 }
